msc thesis added

--- a/publications.html
+++ b/publications.html
@@ -68,7 +68,9 @@
 <span class="journal-info"> IEEE Transactions on Network and Service Management (TNSM)
         <span class="journal">
 </span>
-	<span class='year'> 2019 </span> <span class='status'> To appear </span>
+	<span class='year'> 2019 </span> 
+    <span> DOI: <a href="https://doi.org/10.1109/TNSM.2019.2896710" class="doi">https://doi.org/10.1109/TNSM.2019.2896710</a> </span>
+
 	</span>
   </li>
 </ul>
@@ -86,11 +88,12 @@
 	<span class="authorship">Alemnew Sheferaw Asrese</span>, Ermias Andargie Walelgne, Vaibhav Bajpai, Andra Lutu, Ozgu Alay, Joerg Ott  
 	</span>
 <span class="journal-info">
-        <span class="journal"> Passive Active Measurement Conference  
+        <span class="journal"> 20th international conference on Passive Active Measurement (PAM), Puerto Varas, Chie.   
 </span>
 	<span class='year'> 2019 </span> 
-	<span class='status'> To appear </span>
 	</span>
+    <span>DOI: <a href="https://doi.org/10.1007/978-3-030-15986-3\_2" class="doi">10.1007/978-3-030-15986-3\_2</a> </span>
+
   </li>
   <li class="article">
       <span class="title">
@@ -102,9 +105,9 @@
 	Diego Neves da Hora, <span class="authorship">Alemnew Sheferaw Asrese</span>, Vassilis Christophides, Renata Teixeira and Dario Rossi
 	</span>
 <span class="journal-info">
-        <span class="journal"> Passive Active Measurement Conference (PAM), Berlin, Germany  
+        <span class="journal"> 19th International Conference on Passive Active Measurement Conference (PAM), Berlin, Germany  
 </span>
-<span> <a href="https://doi.org/10.1007/978-3-319-76481-8_3" class="doi">10.1007/978-3-319-76481-8_3 </a> </span>
+<span>DOI: <a href="https://doi.org/10.1007/978-3-319-76481-8_3" class="doi">10.1007/978-3-319-76481-8_3 </a> </span>
 	<span class='year'> 2018 </span> 
 	</span>
   </li>
@@ -120,7 +123,7 @@
       <span class="journal-info">
         <span class="journal">Fifth IEEE International Workshop on  Quality of Experience for Multimedia Communications - QoEMC2016,  IEEE GLOBECOM,  Washington, DC, USA</span>,
           <span class="pages"></span>.
-      <span>
+      <span>DOI: 
         <a href="http://dx.doi.org/10.1109/GLOCOMW.2016.7849082" class="doi">10.1109/GLOCOMW.2016.7849082</a>
       <span class="year"> 2016</span>
   </li>
@@ -135,7 +138,7 @@
       <span class="journal-info">
         <span class="journal">Seventh International Workshop on Quality of Multimedia Experience,  QoMEX 2015, Pilos, Messinia, Greece,</span>,
           <span class="pages"></span>.
-      <span>
+      <span> DOI: 
         <a href="http://dx.doi.org/10.1109/QoMEX.2015.7148138" class="doi">10.1109/QoMEX.2015.7148138</a>
       <span class="year">2015</span>
   </li>
@@ -143,11 +146,11 @@
 </ul>
 
 <!-- Thesises -->
-<h3>  Thesises </h3>
+<h3>  Theses</h3>
     <ul class="publications">
   <li class="article">
       <span class="title">
-        <a href="#"-->
+        <a href="docs/msc_thesis_final"-->
          Master thesis: Design and development of Dynamic Fleet Management Prototype 
 	</a>
       </span>
@@ -181,7 +184,7 @@
     <ul class="publications">
   <li class="article">
       <span class="title">
-        <a href="#"-->
+        <a href="pubs/mobisys-18-poster.pdf"-->
 	 Using Crowdsourcing Data for Adaptive Video 
 Streaming in Cellular Network	
 </a>
