msc thesis added

--- a/publications.html
+++ b/publications.html
@@ -65,11 +65,11 @@
       <span class="authors">
 	<span class="authorship">Alemnew Sheferaw Asrese</span>, Steffie Jacob Eravuchira, Vaibhav Bajpai, Pasi Sarolahti, Jörg Ott
  	</span>
-<span class="journal-info"> IEEE Transactions on Network and Service Management (TNSM)
+<span class="journal-info"> IEEE Transactions on Network and Service Management (TNSM).
         <span class="journal">
 </span>
 	<span class='year'> 2019 </span> 
-    <span> DOI: <a href="https://doi.org/10.1109/TNSM.2019.2896710" class="doi">https://doi.org/10.1109/TNSM.2019.2896710</a> </span>
+    <span> DOI: <a href="https://doi.org/10.1109/TNSM.2019.2896710" class="doi">10.1109/TNSM.2019.2896710</a> </span>
 
 	</span>
   </li>
@@ -88,7 +88,7 @@
 	<span class="authorship">Alemnew Sheferaw Asrese</span>, Ermias Andargie Walelgne, Vaibhav Bajpai, Andra Lutu, Ozgu Alay, Joerg Ott  
 	</span>
 <span class="journal-info">
-        <span class="journal"> 20th international conference on Passive Active Measurement (PAM), Puerto Varas, Chie.   
+        <span class="journal"> 20th international conference on Passive Active Measurement (PAM), Puerto Varas, Chile.   
 </span>
 	<span class='year'> 2019 </span> 
 	</span>
