msc thesis added

--- a/publications.html
+++ b/publications.html
@@ -150,7 +150,7 @@
     <ul class="publications">
   <li class="article">
       <span class="title">
-        <a href="docs/msc_thesis_final"-->
+        <a href="docs/msc_thesis_final.pdf"-->
          Master thesis: Design and development of Dynamic Fleet Management Prototype 
 	</a>
       </span>
