--- a/publications.html
+++ b/publications.html
@@ -68,7 +68,7 @@
 <span class="journal-info"> IEEE Transactions on Network and Service Management (TNSM).
         <span class="journal">
 </span>
-	<span class='year'> 2019 </span> 
+	<span class='year'> June 2019 </span> 
     <span> DOI: <a href="https://doi.org/10.1109/TNSM.2019.2896710" class="doi">10.1109/TNSM.2019.2896710</a> </span>
 
 	</span>
