--- a/publications.html
+++ b/publications.html
@@ -92,7 +92,7 @@
 </span>
 	<span class='year'> 2019 </span> 
 	</span>
-    <span>DOI: <a href="https://doi.org/10.1007/978-3-030-15986-3\_2" class="doi">10.1007/978-3-030-15986-3\_2</a> </span>
+    <span>DOI: <a href="https://doi.org/10.1007/978-3-030-15986-3_2" class="doi">10.1007/978-3-030-15986-3_2</a> </span>
 
   </li>
   <li class="article">
