--- a/publications.html
+++ b/publications.html
@@ -73,6 +73,24 @@
 
 	</span>
   </li>
+
+  <li class="article">
+      <span class="title">
+        <a href="pubs/tnsm-20.pdf"> 
+            Understanding Data Usage Patterns of Geographically Diverse Mobile Users
+	</a>
+      </span>
+      <span class="authors"> Ermias Andarie Walelgne,
+	<span class="authorship">Alemnew Sheferaw Asrese</span>, Jukka Manner, Vaibhav Bajpai,  Jörg Ott
+ 	</span>
+<span class="journal-info"> IEEE Transactions on Network and Service Management (TNSM).
+        <span class="journal">
+</span>
+	<span class='year'> 2020 </span> 
+    <span> DOI: <a href="https://doi.org/10.1109/TNSM.2020.3037503" class="doi">10.1109/TNSM.2019.2896710</a> </span>
+
+	</span>
+  </li>
 </ul>
 
 <!-- Conferences -->
